--- a/main.css
+++ b/main.css
@@ -1,1 +1,34 @@
-
+p {
+    font-family: Arial;
+    font-size: 20px;
+    text-align: center;
+  }
+  
+  img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 150px;
+    height: auto;
+  }
+  
+  a:link, a:visited {
+    background-color: white;
+    color: black;
+    border: 2px solid cyan;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+  }
+  
+  a:hover, a:active {
+    background-color: cyan;
+    color: white;
+  }
+  
+  
+  #msg {
+    font-family: Arial;
+    font-size: 50px;
+  }
